Fix scroll limits and navigation vertical alignment on subpages

--- a/_styles/page.scss
+++ b/_styles/page.scss
@@ -36,6 +36,7 @@ main
 	@include flex(row, 1 1 auto);
 	max-height: var(--body-height);
 	min-height: var(--body-height);
+	height: var(--body-height);
 	position: relative;
 	color: var(--text-main);
 	scroll-behavior: auto;
@@ -63,7 +64,7 @@ head *
 	margin-left: auto;
 	margin-right: auto;
 	transition: all var(--standard-transition-timing);
-	padding-bottom: 50px;
+	padding: 50px 0;
 }
 
 img
@@ -92,6 +93,7 @@ section
 		overflow-y: auto;
 		overflow-x: hidden;
 		height: 100%;
+		padding: 0;
 		-ms-overflow-style: none;
 		scrollbar-width: none;
 		display: block;
